# fastapi-rbac-rag-app

./: .env.example  .gitignore  README.md  make_admin.py  pyproject.toml  requirements.txt
app/: database.py  main.py  policy.polar
app/auth/: authorization.py  jwt.py  security.py
app/models/: document.py  user.py
app/routers/: auth.py  rag.py  users.py
app/services/: rag_service.py
